--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Айзия</title>
+    <link rel="stylesheet" href="styles/index_style.css">
     <%- include('components/imports.ejs') %>
 </head>
 
