--- a/views/styles/index_style.css
+++ b/views/styles/index_style.css
@@ -1,6 +1,5 @@
 html,
 body {
-    font-family: 'The Seasons', sans-serif;
     color: #FFFFFF;
     width: 100%;
     max-width: 100%;
@@ -18,6 +17,7 @@ h1 {
     font-size: 5em;
     font-weight: 600;
     letter-spacing: -0.055em;
+    color: #FFFFFF !important;
 }
 
 h2 {
@@ -45,7 +45,8 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* Это позволяет кликам передаваться через .search-border */
+    pointer-events: none;
+    /* Это позволяет кликам передаваться через .search-border */
 }
 
 .search-icon {
@@ -56,6 +57,7 @@ h2 {
     pointer-events: none;
     font-size: 1.22em;
     transition: transform 400ms 220ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+    color: #FFFFFF;
 }
 
 .border {
@@ -74,13 +76,15 @@ h2 {
 }
 
 #search {
-    font-family: 'The Seasons', sans-serif;
-    width: 100%; /* Уменьшение ширины на размер отступов */
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    width: 100%;
+    /* Уменьшение ширины на размер отступов */
     height: 60px;
     border-radius: 120px;
     border: none;
     background: rgba(255, 255, 255, 0);
-    padding: 0 68px; /* Уменьшение padding чтобы текст не вылезал за границы */
+    padding: 0 68px;
+    /* Уменьшение padding чтобы текст не вылезал за границы */
     color: #FFFFFF;
     font-size: 1.32em;
     font-weight: 400;
