--- a/views/styles/index_style.css
+++ b/views/styles/index_style.css
@@ -1,4 +1,3 @@
-html,
 body {
     color: #FFFFFF;
     width: 100%;
@@ -14,7 +13,7 @@ h1 {
     display: block;
     margin: 0 auto 25px auto;
     text-align: center;
-    font-size: 5em;
+    font-size: 500% !important;
     font-weight: 600;
     letter-spacing: -0.055em;
     color: #FFFFFF !important;
