--- a/views/styles/index_style.css
+++ b/views/styles/index_style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Georgia, serif;
     color: #FFFFFF;
     width: 100%;
     max-width: 100%;
@@ -75,7 +76,6 @@ h2 {
 }
 
 #search {
-    font-family: "Google Sans", Roboto, Arial, sans-serif;
     width: 100%;
     /* Уменьшение ширины на размер отступов */
     height: 60px;
@@ -129,7 +129,6 @@ h2 {
     cursor: pointer;
     display: inline-flex;
     fill: currentcolor;
-    font-family: "Google Sans", Roboto, Arial, sans-serif;
     font-size: 14px;
     font-weight: 500;
     height: 48px;
