--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles/signup_style.css">
     <%- include('../components/imports.ejs') %>
 </head>
+
 <body>
     <div class="container my-5">
         <div class="row align-items-center px-5">
@@ -16,34 +18,39 @@
                     <div class="fs-3 fw-semibold mb-3">Регистрация</div>
                     <% if (success) { %>
                         <span class="badge text-bg-success mb-3 fs-5"><a href="/login">Войти в аккаунт</a></span>
-                    <% } else if (error) { %>
-                        <span class="badge text-bg-danger mb-3 fs-5"></span>
-                    <% } %>
-                    <div class="row">
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Имя пользователя</label>
-                            <input type="text" class="form-control" name="username" placeholder="Введите имя пользователя...">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" name="password" placeholder="Введите пароль...">
-                        </div>
-                        <div class="mb-3">
-                            <label for="re_password" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" name="re_password" placeholder="Повторите пароль...">
-                        </div>
-                        <div class="mb-3">
-                            <button type="submit" class="btn btn-primary">Регистрация</button>
-                        </div>
-                        <% if (success) { %>
-                            <div class="mb-3">
-                                Уже загеристрированы? <a href="/login" class="link-primary text-decoration-none">Войти в аккаунт</a>
-                            </div>
-                        <% } %>
-                    </div>
+                        <% } else if (error) { %>
+                            <span class="badge text-bg-danger mb-3 fs-5"></span>
+                            <% } %>
+                                <div class="row">
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Имя пользователя</label>
+                                        <input type="text" class="form-control" name="username"
+                                            placeholder="Введите имя пользователя...">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="password" class="form-label">Пароль</label>
+                                        <input type="password" class="form-control" name="password"
+                                            placeholder="Введите пароль...">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="re_password" class="form-label">Пароль</label>
+                                        <input type="password" class="form-control" name="re_password"
+                                            placeholder="Повторите пароль...">
+                                    </div>
+                                    <div class="mb-3">
+                                        <button type="submit" class="btn btn-primary">Регистрация</button>
+                                    </div>
+                                    <% if (success) { %>
+                                        <div class="mb-3">
+                                            Уже загеристрированы? <a href="/login"
+                                                class="link-primary text-decoration-none">Войти в аккаунт</a>
+                                        </div>
+                                        <% } %>
+                                </div>
                 </form>
             </div>
         </div>
     </div>
 </body>
+
 </html>
