--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,11 @@
                     <h2 class="text-white">Welcome, <%= user.username %>!
                     </h2>
                 </div>
-                <% } %>
+                
+                    <div class="row align-items-center py-2">
+                        <div id="timeSince"></div>
+                    </div>
+                    <% } %>
                     <div class="row align-items-center py-5">
                         <h1>Quote of the Day</h1>
                     </div>
@@ -62,6 +66,7 @@
     <!-- Footer and Scripts -->
     <%- include('components/footer.ejs') %>
         <%- include('scripts/search.ejs') %>
+            <%- include('scripts/rel_time.ejs') %>
 </body>
 
 </html>
