--- a/views/styles/index_style.css
+++ b/views/styles/index_style.css
@@ -185,3 +185,14 @@ h2 {
 .button:disabled {
     box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
+
+.time-block {
+    display: inline-block;
+    background-color: #000080;
+    color: white;
+    font-size: 24px;
+    padding: 15px;
+    margin: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
