--- a/views/styles/index_style.css
+++ b/views/styles/index_style.css
@@ -196,3 +196,10 @@ h2 {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Центровка счетчика на странице */
+.time-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
