--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,11 +62,9 @@
                     </div>
         </div>
     </section>
-
-    <!-- Footer and Scripts -->
-    <%- include('components/footer.ejs') %>
-        <%- include('scripts/search.ejs') %>
-            <%- include('scripts/rel_time.ejs') %>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="scripts/rel_time.js"></script>
+    <script type="text/javascript" src="scripts/search.js"></script>
 </body>
 
 </html>
