--- a/views/pages/calendar.ejs
+++ b/views/pages/calendar.ejs
@@ -173,7 +173,8 @@
         </div>
     </div>
 
-    <%- include('../scripts/calendar.ejs') %>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="scripts/calendar_script.js"></script>
 </body>
 
 </html>
